--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,10 @@ ext {
 group 'com.exactpro.th2'
 version release_version
 
+dependencyLocking {
+    lockAllConfigurations()
+}
+
 repositories {
     mavenLocal()
     mavenCentral()
